@@ -1,7 +1,7 @@
 Xfce4-Sensors-Plugin
 ====================
 
-Version 0.3
+Version 0.3.1
 
 Copyright (c) 2004 by Fabian Nowak (timystery@arcor.de)
 
