@@ -1,3 +1,6 @@
+2004-12-24 17:42  fabian
+    * sensors.c
+
 2004-12-24 13:49  benny
 
 	* Makefile.am, README, TODO, autogen.sh, configure.ac,
